feat: support undefined_as_null for DynamoDB

--- a/changes/ee/feat-13861.en.md
+++ b/changes/ee/feat-13861.en.md
@@ -1,1 +1,14 @@
-A new configuration item `rule_engine.sql_actions_undefined_vars_as_null` has been added to the rule engine to ensure that when performing rule actions related to SQL databases (MySQL, PgSQL, etc.), undefined variables are treated as NULL.
+A new configuration item `undefined_vars_as_null` has been added to some of the databases actions, to ensure that undefined variables are treated as NULL when writing data.
+
+The following actions and rule SQL functions are affected by this configuration item:
+
+Actions:
+- MySQL
+- ClickHouse
+- SQLServer
+- Cassandra
+- TDengine
+- DynamoDB
+
+Rule SQL functions:
+- `join_to_sql_values_string`
