feat: support undefined_as_null for SQLServer

--- a/changes/ee/feat-13861.en.md
+++ b/changes/ee/feat-13861.en.md
@@ -1,6 +1,6 @@
 A new configuration item `undefined_vars_as_null` has been added to some of the databases actions, to ensure that undefined variables are treated as NULL when writing data.
 
-The following actions and rule SQL functions are affected by this configuration item:
+The following actions are affected by this configuration item:
 
 Actions:
 - MySQL
@@ -9,6 +9,3 @@ Actions:
 - Cassandra
 - TDengine
 - DynamoDB
-
-Rule SQL functions:
-- `join_to_sql_values_string`
